--- a/index.html
+++ b/index.html
@@ -237,27 +237,28 @@
 </div>
 
   </header>
+  <div style="width:20% ;height:20%;margin-right:82% ; "><img style="width: 100%;" src="peste.png" alt=""></div>
   <!-- لوگو -->
   <img  src="logo.png" alt="لوگو" class="logo" />
 
   <!-- آیکن‌ها -->
   <div class="icons margin">
-    <div class="circle soft-gray " onclick="window.location='https://instagram.com/arefmopo'">
+    <div class="circle soft-gray " onclick="window.location='https://instagram.com/Ajil_hashem_nasab'">
       <img src="instagram.png" alt="instagram" class="icon-img">
     </div>
-    <div class="circle soft-gray" onclick="window.location='https://wa.me/0901475937'">
+    <div class="circle soft-gray" onclick="window.location='https://wa.me/09913655077'">
       <img src="whatsapp.png" alt="whatsapp" class="icon-imgg">
     </div>
-    <div class="circle soft-gray" onclick="window.location='https://t.me/arefmopo'">
+    <div class="circle soft-gray" onclick="window.location='https://t.me/.'">
       <img src="telegram.png" alt="telegram" class="icon-imgg">
     </div>
   </div>
 
   <!-- شماره تماس -->
-  <div class="phone-box soft-gray" onclick="navigator.clipboard.writeText('0901475937'); alert('شماره کپی شد!')">
-    <i class="fas fa-phone-flip" style="color: rgba(0, 0, 0, 0.6);"></i> 0901475937
+  <div class="phone-box soft-gray" onclick="navigator.clipboard.writeText('09913655077'); alert('شماره کپی شد!')">
+    <i class="fas fa-phone-flip" style="color: rgba(0, 0, 0, 0.6);"></i> 09913655077
   </div>
-  <img style="width:5%;margin-left:95% ;" src="badam.png" alt="badam">
+ 
  <script>
 const falList = [
   "در بیابان طلب، آب حیاتم دادند 🌷",
