--- a/index.html
+++ b/index.html
@@ -239,15 +239,15 @@
   </header>
  
   <!-- لوگو -->
-  <img src="./hadis_files/logo.png" alt="لوگو" class="logo">
+  <img src="logo.png" alt="لوگو" class="logo">
 
   <!-- آیکن‌ها -->
   <div class="icons margin">
     <div class="circle soft-gray " onclick="window.location=&#39;https://instagram.com/Ajil_hashem_nasab&#39;">
-      <img src="./hadis_files/instagram.png" alt="instagram" class="icon-img">
+      <img src="instagram.png" alt="instagram" class="icon-img">
     </div>
     <div class="circle soft-gray" onclick="window.location=&#39;https://wa.me/09913655077&#39;">
-      <img src="./hadis_files/whatsapp.png" alt="whatsapp" class="icon-imgg">
+      <img src="whatsapp.png" alt="whatsapp" class="icon-imgg">
     </div>
     
   </div>
