--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     margin: 0;
     min-height: 100vh;
     font-family: sans-serif;
-    background-image: url('popo.JPG');
+    background-image: url('popo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center top;
