--- a/index.html
+++ b/index.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
-<!-- saved from url=(0050)file:///C:/Users/NikSamar/Desktop/hadis/hadis.html -->
-<html lang="fa" dir="rtl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>هاشم نسب</title>
+<html lang="fa" dir="rtl">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>هاشم نسب</title>
 
-  <!-- فونت و آیکن‌ها -->
- <!-- Font Awesome 7 Free CDN -->
+<!-- فونت و آیکن‌ها -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" rel="stylesheet">
-  <style>
-  body {
+
+<style>
+body {
     margin: 0;
     min-height: 100vh;
     font-family: sans-serif;
     background-image: url('popo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center top;
+    background-position: center -400px;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    background-position: center -400px
-  }
+}
 
-  /* لوگو */
-  .logo {
+/* لوگو */
+.logo {
     width: 35%;
     max-width: 220px;
     margin-top: 30px;
-  }
+}
 
-  /* آیکن‌ها */
-  .icons {
+/* آیکن‌ها */
+.icons {
     display: flex;
     justify-content: center;
     gap: 25px;
     flex-wrap: wrap;
     margin: 20px 0;
-  }
+}
 
-  .circle {
+.circle {
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -53,27 +52,27 @@
     font-size: 36px;
     cursor: pointer;
     transition: 0.2s;
-  }
+}
 
-  .circle:hover {
+.circle:hover {
     transform: scale(1.08);
     box-shadow: 0 6px 14px rgba(0,0,0,0.15);
-  }
+}
 
-  .soft-gray {
+.soft-gray {
     border: 2px solid rgba(0,0,0,0.08);
     transition: 0.25s;
-  }
+}
 
-  .soft-gray:hover {
+.soft-gray:hover {
     border-color: rgba(0,0,0,0.15);
-  }
+}
 
-  .icon-img { width: 100%; height: 100%; object-fit: contain; }
-  .icon-imgg { width: 125%; height: 125%; object-fit: contain; }
+.icon-img { width: 100%; height: 100%; object-fit: contain; }
+.icon-imgg { width: 125%; height: 125%; object-fit: contain; }
 
-  /* شماره تماس */
-  .phone-box {
+/* شماره تماس */
+.phone-box {
     width: 80%;
     max-width: 300px;
     padding: 18px;
@@ -86,216 +85,164 @@
     cursor: pointer;
     transition: 0.2s;
     margin: 20px auto 40px;
-  }
+}
 
-  .phone-box:hover {
+.phone-box:hover {
     transform: scale(1.04);
     box-shadow: 0 6px 14px rgba(0,0,0,0.15);
-  }
+}
 
-  /* 📱 ریسپانسیو برای موبایل */
-  @media (max-width: 768px) {
-    body {
-      background-position: center top;
-    }
-
-    .logo {
-      width: 55%;
-      margin-top: 30%;
-      
-    }
-
-    .icons {
-      gap: 20px;
-      margin-top: 25px;
-    }
-
-    .circle {
-      width: 50px;
-      height: 50px;
-    }
-
-    .phone-box {
-      font-size: 18px;
-      padding: 14px;
-    }
-  }
-
-  /* 🎯 حالت خیلی کوچک (مثلاً گوشی 360px) */
-  @media (max-width: 480px) {
-    .logo {
-      width: 70%;
-    }
-
-    .circle {
-      width: 60px;
-      height: 60px;
-    }
-
-    .phone-box {
-      width: 90%;
-      font-size: 16px;
-    }
-  }
- /* دکمه شیشه‌ای فال حافظ (بهبود یافته) */
+/* دکمه شیشه‌ای فال حافظ */
 .glass-btn {
-  position: absolute;
-  top: 10px; /* کمی فاصله بیشتر از بالا */
-  right: 5px; /* کمی فاصله بیشتر از راست */
-  padding: 5px 5px; /* بزرگتر شدن اندازه */
-  border-radius: 15px; /* لبه‌های گردتر */
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  color: white;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-  z-index: 1000; /* مطمئن شدن از نمایش روی همه چیز */
-  transition: all 0.4s ease;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    padding: 5px 5px;
+    border-radius: 15px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 1000;
+    transition: all 0.4s ease;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .glass-btn:hover {
-  background: rgba(255, 255, 255, 0.3);
-  transform: translateY(-3px) scale(1.05);
-  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+    background: rgba(255, 255, 255, 0.3);
+    transform: translateY(-3px) scale(1.05);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
 }
 
-/* استایل پاپ‌آپ (بدون تغییر زیاد، فقط کمی زیباتر) */
-.fal-popup {
-  display: none;
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  justify-content: center;
-  align-items: center;
+/* پاپ آپ */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    backdrop-filter: blur(5px);
 }
 
-.fal-content {
-  background: rgba(255, 255, 255, 0.18);
-  backdrop-filter: blur(12px);
-  -webkit-backdrop-filter: blur(12px);
-  border-radius: 25px; /* لبه‌های گردتر برای پاپ‌آپ */
-  width: 85%;
-  max-width: 400px;
-  padding: 30px;
-  text-align: center;
-  color: white;
-  font-size: 19px;
-  box-shadow: 0 6px 30px rgba(255,255,255,0.15);
-  animation: fadeIn 0.3s ease-out;
+.modal-content {
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255,255,255,0.3);
+    width: 80%;
+    max-width: 700px;
+    margin: 10% auto;
+    padding: 20px;
+    box-shadow: 0 8px 32px rgba(0,0,0,0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.close-btn {
-  margin-top: 20px;
-  padding: 10px 30px;
-  background: rgba(255,255,255,0.35);
-  color: white;
-  border: 1px solid white;
-  border-radius: 12px;
-  cursor: pointer;
-  transition: 0.3s;
+/* دکمه بستن پاپ آپ */
+.close {
+    align-self: flex-end;
+    font-size: 25px;
+    cursor: pointer;
+    color: #fff;
 }
 
-.close-btn:hover {
-  background: rgba(255,255,255,0.6);
+/* iframe شیشه‌ای */
+iframe {
+    width: 100%;
+    height: 400px;
+    border: none;
+    border-radius: 15px;
+    backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+}
+
+/* ریسپانسیو */
+@media (max-width: 768px) {
+    body { background-position: center top; }
+    .logo { width: 55%; margin-top: 30%; }
+    .icons { gap: 20px; margin-top: 25px; }
+    .circle { width: 50px; height: 50px; }
+    .phone-box { font-size: 18px; padding: 14px; }
+}
+
+@media (max-width: 480px) {
+    .logo { width: 70%; }
+    .circle { width: 60px; height: 60px; }
+    .phone-box { width: 90%; font-size: 16px; }
 }
 .margin { margin-top:60% ;
-
-
-
 }
-
-
-
-
-@keyframes fadeIn {
-  from {opacity: 0; transform: scale(0.9);}
-  to {opacity: 1; transform: scale(1);}
-}
-  </style>
+</style>
 </head>
-<body>
-  <header>
-<!-- دکمه فال حافظ -->
-<button class="glass-btn" onclick="openFal()"><span style="color: rgba(3, 58, 155, 0.8);font-family:sans-serif;"> نغمه ای از حافظ </span>  </button>
 
-<!-- پنجره پاپ‌آپ فال حافظ -->
-<div id="falPopup" class="fal-popup">
-  <div class="fal-content">
-    <h2>     </h2>
-    <p id="falText">در انتظار فال هستیم...</p>
-    <button class="close-btn" onclick="closeFal()">بستن</button>
-  </div>
+<body>
+<header>
+    <!-- دکمه فال حافظ -->
+    <button id="openPopup" class="glass-btn" style="color: rgba(14, 21, 106, 0.8);">فال حافظ</button>
+
+    <!-- پاپ آپ فال حافظ -->
+     <div id="popup" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <iframe id="popupIframe" src="https://www.falehafez.org/fal.html"></iframe>
+        </div>
+    </div>
+</header>
+
+<!-- دکمه موزیک -->
+<button id="playMusic" class="glass-btn" style="margin-top: 9%; color: rgba(14, 21, 106, 0.8);">
+    <i class="fas fa-music"></i>
+</button>
+
+<audio id="myAudio">
+    <source src="music.mp3" type="audio/mpeg">
+    مرورگر شما تگ صوتی را پشتیبانی نمی‌کند.
+</audio>
+
+<!-- لوگو -->
+<img src="logo.png" alt="لوگو" class="logo">
+
+<!-- آیکن‌ها -->
+<div class="icons margin">
+    <div class="circle soft-gray" onclick="window.location='https://instagram.com/Ajil_hashem_nasab'">
+        <img src="instagram.png" alt="instagram" class="icon-img">
+    </div>
+    <div class="circle soft-gray" onclick="window.location='https://wa.me/989913655077'">
+        <img src="whatsapp.png" alt="whatsapp" class="icon-imgg">
+    </div>
 </div>
 
-  </header>
- 
-  <!-- لوگو -->
-  <img src="logo.png" alt="لوگو" class="logo">
-
-  <!-- آیکن‌ها -->
-  <div class="icons margin">
-    <div class="circle soft-gray " onclick="window.location=&#39;https://instagram.com/Ajil_hashem_nasab&#39;">
-      <img src="instagram.png" alt="instagram" class="icon-img">
-    </div>
-    <div class="circle soft-gray" onclick="window.location=&#39;https://wa.me/09913655077&#39;">
-      <img src="whatsapp.png" alt="whatsapp" class="icon-imgg">
-    </div>
-    
-  </div>
-
-  <!-- شماره تماس -->
-  <div class="phone-box soft-gray" onclick="navigator.clipboard.writeText(&#39;09913655077&#39;); alert(&#39;شماره کپی شد!&#39;)">
+<!-- شماره تماس -->
+<div class="phone-box soft-gray" onclick="navigator.clipboard.writeText('09913655077'); alert('شماره کپی شد!')">
     <i class="fas fa-phone-flip" style="color: rgba(0, 0, 0, 0.6);"></i> 09913655077
-  </div>
+</div>
 
- <script>
-const falList = [
-  "در بیابان طلب، آب حیاتم دادند 🌷",
-  "دوش دیدم که ملایک در میخانه زدند 🍷",
-  "بوی خوش خبردار کسی می‌آمد 🌸",
-  "بر لب بحر فنا، نغمه‌ی عشق است مرا 💫",
-  "چو باد عزم سر کوی یار خواهم کرد 💕",
-  "همچو حافظ به هواى پى دلدار برو 🌹",
-  "ای دل غافل، چه داری در سر؟ 🧐",
-  "سخن عشق تو در جمله‌ی رندان افتاد 🎶",
-  "در وفای تو شک نیست ولیکن بدهند 💔",
-  "یار دیرین که سفر کرده، به زودی بازآید ⏳",
-  // ... (در کد نهایی شما، این لیست باید به 100 مورد برسد)
-  "حافظا مجلس بزم آن‌که نقاب انداخته است 🌟",
-  "بیا تا گل برافشانیم و می در ساغر اندازیم 🥂",
-  "دلم گرفته ز دست زمانه، آهی کشیدم 😔",
-  "آتش عشق تو در جان و دلم تا چه کند 🔥",
-  "به جهان خرّم از آنم که دلی شاد کنم 💖",
-  "گر مسلم نزند ساقی ما را ساقی 🍻",
-  "دوری از یار، دوری از جان است، ای دل صبوری کن 🤍",
-  "حافظ به شوق کعبه کند راه کاروان را 🕋",
-  "روزی که نخواهی که به خود آیی از این حال 😵‍💫",
-  "صد نکته‌ی خردمندانه که در سینه نهان شد 🧠"
-  // (توجه: در نسخه نهایی، تعداد را به 100 مورد برسانید)
-];
+<script>
+const popup = document.getElementById("popup");
+const openPopup = document.getElementById("openPopup");
+const closeBtn = document.querySelector(".close");
 
-function openFal() {
-  // انتخاب فال تصادفی
-  const randomFal = falList[Math.floor(Math.random() * falList.length)];
-  document.getElementById('falText').innerHTML = `
-      <p style="font-size: 22px; line-height: 1.7;">${randomFal}</p>
-      <small style="display: block; margin-top: 15px; color: rgba(255,255,255,0.7);"></small>
-  `;
-  document.getElementById('falPopup').style.display = 'flex';
-}
+openPopup.onclick = () => popup.style.display = "block";
+closeBtn.onclick = () => popup.style.display = "none";
 
-function closeFal() {
-  document.getElementById('falPopup').style.display = 'none';
-}
+window.onclick = (e) => { if(e.target == popup) popup.style.display = "none"; }
+
+const playBtn = document.getElementById("playMusic");
+const myAudio = document.getElementById("myAudio");
+playBtn.onclick = () => myAudio.play();
 </script>
-
-</body></html>
+<p style="font-weight: bold ;  ; color: rgba(2, 2, 139,0.5);" >
+     آدرس :
+ شعبه مرکزی ،
+شعبه ابن سینا ،
+درمیناب</p>
+</body>
+</html>
