--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@ iframe {
 <!-- لوگو -->
 <img src="logo.png" alt="لوگو" class="logo">
 
-<!-- آیکن‌ها -->
+<!-- آیکن‌ها --> 
+ <div style="margin-bottom:25% ;">
 <div class="icons margin">
+  <div style="text-align: center;">  <img src="vade.png" alt="" style="width: 30%;"></div>
     <div class="circle soft-gray" onclick="window.location='https://instagram.com/Ajil_hashem_nasab'">
         <img src="instagram.png" alt="instagram" class="icon-img">
     </div>
@@ -226,7 +228,12 @@ iframe {
 <div class="phone-box soft-gray" onclick="navigator.clipboard.writeText('09913655077'); alert('شماره کپی شد!')">
     <i class="fas fa-phone-flip" style="color: rgba(0, 0, 0, 0.6);"></i> 09913655077
 </div>
-
+<p style=" font-size: 16px; font-weight: bold;font-family:iransans  ;color: rgba(7, 7, 140,0.6); text-align:center ;" >
+     آدرس :
+ شعبه مرکزی ،
+شعبه ابن سینا ،
+درمیناب</p>
+</div>
 <script>
 const popup = document.getElementById("popup");
 const openPopup = document.getElementById("openPopup");
@@ -251,10 +258,6 @@ btn.onclick = () => {
 
 </script>
 
-<p style="font-weight: bold ;  ; color: rgba(2, 2, 139,0.5); margin-bottom:5 ;" >
-     آدرس :
- شعبه مرکزی ،
-شعبه ابن سینا ،
-درمیناب</p>
+
 </body>
 </html>
