--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>هاشم نسب</title>
 
-<!-- فونت و آیکن‌ها -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" rel="stylesheet">
 
 <style>
@@ -16,12 +15,11 @@ body {
     background-image: url('popo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center -400px;
+    background-position: center -8px;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
 }
 
 /* لوگو */
@@ -31,13 +29,23 @@ body {
     margin-top: 30px;
 }
 
-/* آیکن‌ها */
-.icons {
+/* کارت تماس */
+.contact-wrapper {
     display: flex;
-    justify-content: center;
-    gap: 25px;
-    flex-wrap: wrap;
-    margin: 20px 0;
+    align-items: flex-start;
+    gap: 16px;
+    margin-top: 30px;
+    flex-direction: row-reverse;
+    padding-right:102px ;
+}
+
+/* ستون آیکن‌ها */
+.icons-column {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    flex-shrink: 0;
+    align-items: flex-end;
 }
 
 .circle {
@@ -61,91 +69,53 @@ body {
 
 .soft-gray {
     border: 2px solid rgba(0,0,0,0.08);
-    transition: 0.25s;
 }
 
-.soft-gray:hover {
-    border-color: rgba(0,0,0,0.15);
-}
-
+/* آیکن‌ها */
 .icon-img { width: 100%; height: 100%; object-fit: contain; }
 .icon-imgg { width: 125%; height: 125%; object-fit: contain; }
+.icon-imggg { width: 75%; height: 75%; object-fit: contain; }
 
-/* شماره تماس */
-.phone-box {
-    width: 80%;
-    max-width: 300px;
-    padding: 18px;
-    background: rgba(255, 255, 255, 0.9);
-    border-radius: 40px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-    cursor: pointer;
-    transition: 0.2s;
-    margin: 20px auto 40px;
+/* آدرس */
+.address img {
+    width: 70%;
+    max-width: 260px;
 }
 
-.phone-box:hover {
-    transform: scale(1.04);
-    box-shadow: 0 6px 14px rgba(0,0,0,0.15);
-}
-
-/* دکمه شیشه‌ای فال حافظ */
+/* دکمه فال حافظ */
 .glass-btn {
-    position: absolute;
-    top: 10px;
-    right: 5px;
-    padding: 5px 5px;
+    margin-top: 15px;
+    padding: 6px 10px;
     border-radius: 15px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255,255,255,0.3);
+    background: rgba(255,255,255,0.15);
     backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    color: white;
-    font-size: 16px;
+    color: rgba(14,21,106,0.8);
     font-weight: bold;
     cursor: pointer;
-    z-index: 1000;
-    transition: all 0.4s ease;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-.glass-btn:hover {
-    background: rgba(255, 255, 255, 0.3);
-    transform: translateY(-3px) scale(1.05);
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
-}
-
-/* پاپ آپ */
+/* پاپ‌آپ */
 .modal {
     display: none;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    inset: 0;
     background: rgba(0,0,0,0.5);
     backdrop-filter: blur(5px);
 }
 
 .modal-content {
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
+    background: rgba(255,255,255,0.2);
     border-radius: 20px;
-    border: 1px solid rgba(255,255,255,0.3);
     width: 80%;
     max-width: 700px;
     margin: 10% auto;
     padding: 20px;
-    box-shadow: 0 8px 32px rgba(0,0,0,0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-/* دکمه بستن پاپ آپ */
 .close {
     align-self: flex-end;
     font-size: 25px;
@@ -153,111 +123,74 @@ body {
     color: #fff;
 }
 
-/* iframe شیشه‌ای */
 iframe {
     width: 100%;
     height: 400px;
-    border: none;
     border-radius: 15px;
-    backdrop-filter: blur(5px);
-    background: rgba(255, 255, 255, 0.1);
-    box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+    border: none;
 }
 
 /* ریسپانسیو */
 @media (max-width: 768px) {
-    body { background-position: center top; }
     .logo { width: 55%; margin-top: 30%; }
-    .icons { gap: 20px; margin-top: 25px; }
-    .circle { width: 50px; height: 50px; }
-    .phone-box { font-size: 18px; padding: 14px; }
-}
-
-@media (max-width: 480px) {
-    .logo { width: 70%; }
-    .circle { width: 60px; height: 60px; }
-    .phone-box { width: 90%; font-size: 16px; }
-}
-.margin { margin-top:60% ;
+    
+    .address img { width: 90%; }
 }
 </style>
 </head>
 
 <body>
-<header>
-    <!-- دکمه فال حافظ -->
-    <button id="openPopup" class="glass-btn" style="color: rgba(14, 21, 106, 0.8);">فال حافظ</button>
 
-    <!-- پاپ آپ فال حافظ -->
-     <div id="popup" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <iframe id="popupIframe" src="https://www.falehafez.org/fal.html"></iframe>
-        </div>
-    </div>
-</header>
-
-<!-- دکمه موزیک -->
-<button id="playMusic"  class="glass-btn" style="margin-top: 11%; color: rgba(14, 21, 106, 0.8);"><i class="fas fa-music"></i></button>
-
-<audio id="myAudio" preload="auto">
-  <source src="music.mp3" type="audio/mpeg">
-</audio>
-
-<audio id="myAudio">
-    <source src="music.mp3" type="audio/mpeg">
-    مرورگر شما تگ صوتی را پشتیبانی نمی‌کند.
-</audio>
-
-<!-- لوگو -->
 <img src="logo.png" alt="لوگو" class="logo">
 
-<!-- آیکن‌ها --> 
- <div style="margin-bottom:25% ;">
-<div class="icons margin">
-  <div style="text-align: center;">  <img src="vade.png" alt="" style="width: 30%;"></div>
-    <div class="circle soft-gray" onclick="window.location='https://instagram.com/Ajil_hashem_nasab'">
-        <img src="instagram.png" alt="instagram" class="icon-img">
+<button id="openPopup" class="glass-btn">فال حافظ</button>
+
+<!-- کارت تماس -->
+<div class="contact-wrapper">
+
+    <div class="icons-column">
+        <div class="circle soft-gray" onclick="window.location='https://instagram.com/Ajil_hashem_nasab'">
+            <img src="instagram.png" class="icon-img">
+        </div>
+
+        <div class="circle soft-gray" onclick="window.location='https://wa.me/989913655077'">
+            <img src="whatsapp.png" class="icon-imgg">
+        </div>
+
+        <div class="circle soft-gray"
+             onclick="navigator.clipboard.writeText('09913655077'); alert('شماره کپی شد!')">
+            <img src="tele.png" class="icon-imggg">
+        </div>
     </div>
-    <div class="circle soft-gray" onclick="window.location='https://wa.me/989913655077'">
-        <img src="whatsapp.png" alt="whatsapp" class="icon-imgg">
+
+    <div class="address" style="margin-top:18% ;">
+        <img src="adres.png" alt="آدرس">
     </div>
+
 </div>
 
-<!-- شماره تماس -->
-<div class="phone-box soft-gray" onclick="navigator.clipboard.writeText('09913655077'); alert('شماره کپی شد!')">
-    <i class="fas fa-phone-flip" style="color: rgba(0, 0, 0, 0.6);"></i> 09913655077
+<!-- پاپ‌آپ -->
+<div id="popup" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <iframe src="https://www.falehafez.org/fal.html"></iframe>
+    </div>
 </div>
-<p style=" font-size: 16px; font-weight: bold;font-family:iransans  ;color: rgba(7, 7, 140,0.6); text-align:center ;" >
-     آدرس :
- شعبه مرکزی ،
-شعبه ابن سینا ،
-درمیناب</p>
-</div>
+<audio id="bgMusic" src="music.mp3" autoplay muted></audio>
 <script>
 const popup = document.getElementById("popup");
-const openPopup = document.getElementById("openPopup");
-const closeBtn = document.querySelector(".close");
-
-openPopup.onclick = () => popup.style.display = "block";
-closeBtn.onclick = () => popup.style.display = "none";
-
-window.onclick = (e) => { if(e.target == popup) popup.style.display = "none"; }
-
-const btn = document.getElementById("playMusic");
-const audio = document.getElementById("myAudio");
-
-btn.onclick = () => {
-    if (audio.paused) {
-        audio.play();
-        btn.textContent = "توقف ";
-    } else {
-        audio.pause();
-        btn.textContent = "پخش ";  }
-};
-
+document.getElementById("openPopup").onclick = () => popup.style.display = "block";
+document.querySelector(".close").onclick = () => popup.style.display = "none";
+window.onclick = e => { if(e.target === popup) popup.style.display = "none"; }
+ window.addEventListener('load', () => {
+    const music = document.getElementById('bgMusic');
+    // بعد از اجرا، حدود نیم‌ثانیه بعد صدا باز میشه (مرورگر چون autoplay مجازه، فقط mute رو قبول میکنه)
+    setTimeout(() => {
+      music.muted = false;
+      music.volume = 1.0;
+    }, 500);
+  });
 </script>
-
 
 </body>
 </html>
