--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
     background-image: url('popo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center -8px;
+    background-position: center;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
