--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@ iframe {
 </div>
 
 <!-- پاپ‌آپ -->
-<div id="popup" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <iframe src="https://www.falehafez.org/fal.html"></iframe>
+ <div id="popup" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <iframe id="popupIframe" src="https://www.falehafez.org/fal.html"></iframe>
+        </div>
     </div>
-</div>
 <audio id="bgMusic" src="music.mp3" autoplay muted></audio>
 <script>
 const audio = document.getElementById("audio");
