--- a/index.html
+++ b/index.html
@@ -1,258 +1,293 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>هاشم نسب</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>هاشم نسب</title>
 
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" rel="stylesheet">
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
 
-<style>
-body {
-    margin: 0;
-    min-height: 100vh;
-    font-family: sans-serif;
-    background-image: url('popo.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center ;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+    <style>
+      body {
+        margin: 0;
+        min-height: 100vh;
+        font-family: sans-serif;
+        background-image: url("popo.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        overflow-x: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
 
-/* لوگو */
-.logo {
-    width: 35%;
-    max-width: 220px;
-    margin-top: 30px;
-}
+      /* لوگو */
+      .logo {
+        width: 35%;
+        max-width: 220px;
+        margin-top: 30px;
+      }
 
-/* کارت تماس */
-.contact-wrapper {
-    display: flex;
-    align-items: flex-start;
-    gap: 16px;
-    margin-top: 10px;
-    flex-direction: row-reverse;
-    padding-right:97px ;
-}
+      /* کارت تماس */
+      .contact-wrapper {
+        display: flex;
+        align-items: flex-start;
+        gap: 16px;
+        margin-top: 10px;
+        flex-direction: row-reverse;
+        padding-right: 97px;
+      }
 
-/* ستون آیکن‌ها */
-.icons-column {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    flex-shrink: 0;
-    align-items: flex-end;
-}
+      /* ستون آیکن‌ها */
+      .icons-column {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        flex-shrink: 0;
+        align-items: flex-end;
+      }
 
-.circle {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background: white;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 36px;
-    cursor: pointer;
-    transition: 0.2s;
-}
+      .circle {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        background: white;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 36px;
+        cursor: pointer;
+        transition: 0.2s;
+      }
 
-.circle:hover {
-    transform: scale(1.08);
-    box-shadow: 0 6px 14px rgba(0,0,0,0.15);
-}
+      .circle:hover {
+        transform: scale(1.08);
+        box-shadow: 0 6px 14px rgba(0, 0, 0, 0.15);
+      }
 
-.soft-gray {
-    border: 2px solid rgba(0,0,0,0.08);
-}
+      .soft-gray {
+        border: 2px solid rgba(0, 0, 0, 0.08);
+      }
 
-/* آیکن‌ها */
-.icon-img { width: 100%; height: 100%; object-fit: contain; }
-.icon-imgg { width: 125%; height: 125%; object-fit: contain; }
-.icon-imggg { width: 75%; height: 75%; object-fit: contain; }
+      /* آیکن‌ها */
+      .icon-img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+      .icon-imgg {
+        width: 125%;
+        height: 125%;
+        object-fit: contain;
+      }
+      .icon-imggg {
+        width: 75%;
+        height: 75%;
+        object-fit: contain;
+      }
 
-/* آدرس */
-.address img {
-    width: 70%;
-    max-width: 260px;
-}
+      /* آدرس */
+      .address img {
+        width: 70%;
+        max-width: 260px;
+      }
 
-/* دکمه فال حافظ */
-.glass-btn {
-    margin-top: 5px;
-    padding: 6px 10px;
-    border-radius: 15px;
-    border: 1px solid rgba(255,255,255,0.3);
-    background: rgba(255,255,255,0.15);
-    backdrop-filter: blur(10px);
-    color: rgba(14,21,106,0.8);
-    font-weight: bold;
-    cursor: pointer;
-}
+      /* دکمه فال حافظ */
+      .glass-btn {
+        margin-top: 5px;
+        padding: 6px 10px;
+        border-radius: 15px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        background: rgba(255, 255, 255, 0.15);
+        backdrop-filter: blur(10px);
+        color: rgba(14, 21, 106, 0.8);
+        font-weight: bold;
+        cursor: pointer;
+      }
 
-/* پاپ‌آپ */
-.modal {
-    display: none;
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.5);
-    backdrop-filter: blur(5px);
-}
+      /* پاپ‌آپ */
+      .modal {
+        display: none;
+        position: fixed;
+        inset: 0;
+        background: rgba(0, 0, 0, 0.5);
+        backdrop-filter: blur(5px);
+      }
 
-.modal-content {
-    background: rgba(255,255,255,0.2);
-    border-radius: 20px;
-    width: 80%;
-    max-width: 700px;
-    margin: 10% auto;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+      .modal-content {
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 20px;
+        width: 80%;
+        max-width: 700px;
+        margin: 10% auto;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
 
-.close {
-    align-self: flex-end;
-    font-size: 25px;
-    cursor: pointer;
-    color: #fff;
-}
+      .close {
+        align-self: flex-end;
+        font-size: 25px;
+        cursor: pointer;
+        color: #fff;
+      }
 
-iframe {
-    width: 100%;
-    height: 400px;
-    border-radius: 15px;
-    border: none;
-}
+      iframe {
+        width: 100%;
+        height: 400px;
+        border-radius: 15px;
+        border: none;
+      }
 
-/* ریسپانسیو */
-@media (max-width: 768px) {
-    .logo { width: 55%; margin-top: 1%; }
-    
-    .address img { width: 90%; }
-}
-.glass-player{
-  width:50px;        /* اندازه دقیق‌تر مثل عکس */
-  height:40px;
-  display:flex;
-  align-items:center;
-  gap:10px;
-  padding:0 14px;
-  border-radius:25px;
+      /* ریسپانسیو */
+      @media (max-width: 768px) {
+        .logo {
+          width: 55%;
+          margin-top: 1%;
+        }
 
-  background: rgba(255,255,255,0.18);
-  backdrop-filter: blur(14px);
-  -webkit-backdrop-filter: blur(14px);
+        .address img {
+          width: 90%;
+        }
+      }
+      .glass-player {
+        width: 50px; /* اندازه دقیق‌تر مثل عکس */
+        height: 40px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding: 0 14px;
+        border-radius: 25px;
 
-  box-shadow: 0 8px 25px rgba(0,0,0,0.28);
-}
+        background: rgba(255, 255, 255, 0.18);
+        backdrop-filter: blur(14px);
+        -webkit-backdrop-filter: blur(14px);
 
-.glass-player button{
-  background:none;
-  border:none;
-  color:#fff;
-  font-size:16px;
-  cursor:pointer;
-  padding:0;
-}
+        box-shadow: 0 8px 25px rgba(0, 0, 0, 0.28);
+      }
 
-.progress{
-  flex:1;
-  height:3px;          /* باریک‌تر مثل عکس */
-  background: rgba(255,255,255,0.35);
-  border-radius:10px;
-  overflow:hidden;
-  cursor:pointer;
-}
+      .glass-player button {
+        background: none;
+        border: none;
+        color: #fff;
+        font-size: 16px;
+        cursor: pointer;
+        padding: 0;
+      }
 
-.progress-fill{
-  height:100%;
-  width:0%;
-  background:#fff;
-}
-</style>
-</head>
+      .progress {
+        flex: 1;
+        height: 3px; /* باریک‌تر مثل عکس */
+        background: rgba(255, 255, 255, 0.35);
+        border-radius: 10px;
+        overflow: hidden;
+        cursor: pointer;
+      }
 
-<body>
+      .progress-fill {
+        height: 100%;
+        width: 0%;
+        background: #fff;
+      }
+    </style>
+  </head>
 
-<img src="logo.png" alt="لوگو" class="logo">
+  <body>
+    <img src="logo.png" alt="لوگو" class="logo" />
 
-<button id="openPopup" class="glass-btn">فال حافظ</button>
+    <button id="openPopup" class="glass-btn">فال حافظ</button>
 
-<!-- موزیک -->
-<div class="glass-player" style="margin-top:3% ;">
-  <button id="playBtn">▶</button>
+    <!-- موزیک -->
+    <div class="glass-player" style="margin-top: 3%">
+      <button id="playBtn">▶</button>
 
-  <div class="progress">
-    <div class="progress-fill"></div>
-  </div>
+      <div class="progress">
+        <div class="progress-fill"></div>
+      </div>
 
-  <audio id="audio" src="music.mp3"></audio>
-</div>
-<!-- کارت تماس -->
-<div class="contact-wrapper">
-
-    <div class="icons-column">
-        <div class="circle soft-gray" onclick="window.location='https://instagram.com/Ajil_hashem_nasab'">
-            <img src="instagram.png" class="icon-img">
+      <audio id="audio" src="music.mp3"></audio>
+    </div>
+    <!-- کارت تماس -->
+    <div class="contact-wrapper">
+      <div class="icons-column">
+        <div
+          class="circle soft-gray"
+          onclick="window.location='https://instagram.com/Ajil_hashem_nasab'"
+        >
+          <img src="instagram.png" class="icon-img" />
         </div>
 
-        <div class="circle soft-gray" onclick="window.location='https://wa.me/989913655077'">
-            <img src="whatsapp.png" class="icon-imgg">
+        <div
+          class="circle soft-gray"
+          onclick="window.location='https://wa.me/989913655077'"
+        >
+          <img src="whatsapp.png" class="icon-imgg" />
         </div>
 
-        <div class="circle soft-gray"
-             onclick="navigator.clipboard.writeText('09913655077'); alert('شماره کپی شد!')">
-            <img src="tele.png" class="icon-imggg">
+        <div
+          class="circle soft-gray"
+          onclick="navigator.clipboard.writeText('09913655077'); alert('شماره کپی شد!')"
+        >
+          <img src="tele.png" class="icon-imggg" />
         </div>
+      </div>
+
+      <div class="address" style="margin-top: 18%">
+        <img src="adres.png" alt="آدرس" />
+      </div>
     </div>
 
-    <div class="address" style="margin-top:18% ;">
-        <img src="adres.png" alt="آدرس">
+    <!-- پاپ‌آپ -->
+    <div id="popup" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <iframe src="https://www.falehafez.org/fal.html"></iframe>
+      </div>
     </div>
 
-</div>
+    <script>
+      const popup = document.getElementById("popup");
+      const openPopup = document.getElementById("openPopup");
+      const closeBtn = document.querySelector(".close");
 
-<!-- پاپ‌آپ -->
- <div id="popup" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <iframe id="popupIframe" src="https://www.falehafez.org/fal.html"></iframe>
-        </div>
-    </div>
-<audio id="bgMusic" src="music.mp3" autoplay muted></audio>
-<script>
-const audio = document.getElementById("audio");
-const playBtn = document.getElementById("playBtn");
-const progress = document.querySelector(".progress");
-const fill = document.querySelector(".progress-fill");
+      openPopup.onclick = () => (popup.style.display = "block");
+      closeBtn.onclick = () => (popup.style.display = "none");
 
-playBtn.onclick = () => {
-  if(audio.paused){
-    audio.play();
-    playBtn.textContent = "⏸";
-  } else {
-    audio.pause();
-    playBtn.textContent = "▶";
-  }
-};
+      window.onclick = (e) => {
+        if (e.target == popup) popup.style.display = "none";
+      };
 
-audio.ontimeupdate = () => {
-  const percent = (audio.currentTime / audio.duration) * 100;
-  fill.style.width = percent + "%";
-};
+      const audio = document.getElementById("audio");
+      const playBtn = document.getElementById("playBtn");
+      const progress = document.querySelector(".progress");
+      const fill = document.querySelector(".progress-fill");
 
-progress.onclick = (e) => {
-  const rect = progress.getBoundingClientRect();
-  const clickX = e.clientX - rect.left;
-  audio.currentTime = (clickX / rect.width) * audio.duration;
-};
-</script>
+      playBtn.onclick = () => {
+        if (audio.paused) {
+          audio.play();
+          playBtn.textContent = "⏸";
+        } else {
+          audio.pause();
+          playBtn.textContent = "▶";
+        }
+      };
 
-</body>
+      audio.ontimeupdate = () => {
+        const percent = (audio.currentTime / audio.duration) * 100;
+        fill.style.width = percent + "%";
+      };
+
+      progress.onclick = (e) => {
+        const rect = progress.getBoundingClientRect();
+        const clickX = e.clientX - rect.left;
+        audio.currentTime = (clickX / rect.width) * audio.duration;
+      };
+    </script>
+  </body>
 </html>
